--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "morgan": "^1.10.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.2.8",
     "nodemailer": "^6.9.3",
